--- a/samples/BlazorServer/BlazorServer.csproj
+++ b/samples/BlazorServer/BlazorServer.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <UserSecretsId>41b04a32-aa97-49e2-972b-ac030c00f6ee</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
