--- a/src/Blazor.PersianDatePicker/Blazor.PersianDatePicker.csproj
+++ b/src/Blazor.PersianDatePicker/Blazor.PersianDatePicker.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Razor">
 	<PropertyGroup>
 		<TargetFramework>net5.0</TargetFramework>
-		<Version>1.0.2</Version>
+		<Version>2.0.0</Version>
 		<LangVersion>latest</LangVersion>
 		<NoWarn>$(NoWarn);NU1701;1702;1591;NU1602;CS8609;CS8610;CS8619;CS8632</NoWarn>
 		<Nullable>enable</Nullable>
@@ -14,6 +14,7 @@
 			A free Jalali (Persian) and Gregorian (Miladi) dual datepicker library for Blazor applications
 		</Description>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)'=='Debug'">
@@ -30,6 +31,7 @@
 
 	<ItemGroup>
 		<SupportedPlatform Include="browser" />
+		<None Include="docs\README.md" Pack="true" PackagePath="\"/>
 	</ItemGroup>
 
 	<ItemGroup>
