--- a/src/Blazor.PersianDatePicker/Blazor.PersianDatePicker.csproj
+++ b/src/Blazor.PersianDatePicker/Blazor.PersianDatePicker.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Razor">
+﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 	<PropertyGroup>
 		<TargetFramework>net5.0</TargetFramework>
 		<Version>2.0.0</Version>
@@ -14,6 +14,7 @@
 			A free Jalali (Persian) and Gregorian (Miladi) dual datepicker library for Blazor applications
 		</Description>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<!-- Add README.md to nuget package -->
 		<PackageReadmeFile>README.md</PackageReadmeFile>
 	</PropertyGroup>
 
@@ -31,7 +32,8 @@
 
 	<ItemGroup>
 		<SupportedPlatform Include="browser" />
-		<None Include="docs\README.md" Pack="true" PackagePath="\"/>
+		<!-- Add README.md to nuget package -->
+		<None Include="..\..\README.md" Pack="true" PackagePath="\" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -42,3 +44,4 @@
 	</ItemGroup>
 
 </Project>
+
