--- a/.github/workflows/nuget-publish-version.yml
+++ b/.github/workflows/nuget-publish-version.yml
@@ -3,78 +3,89 @@
 on:
   push:
     tags:
-      - 'v*.*.*'  # Triggers on tags like v3.5.3, v4.0.0, etc.
-    branches:
-      - master
+      - "v*.*.*" # Triggers on tags like v3.5.3, v4.0.0, etc.
 
 jobs:
   publish:
     runs-on: ubuntu-latest
-    
+
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      
-    - name: Extract version from tag
-      id: get_version
-      run: echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
-      
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v4
-      with:
-        dotnet-version: |
-          5.0.x
-          6.0.x
-        
-    - name: Update project version
-      run: |
-        sed -i "s/<Version>.*<\/Version>/<Version>${{ steps.get_version.outputs.VERSION }}<\/Version>/" src/Blazor.PersianDatePicker/Blazor.PersianDatePicker.csproj
-        cat src/Blazor.PersianDatePicker/Blazor.PersianDatePicker.csproj | grep "<Version>"
-        
-    - name: Restore dependencies
-      run: dotnet restore src/Blazor.PersianDatePicker/Blazor.PersianDatePicker.csproj
-      
-    - name: Build project
-      run: dotnet build src/Blazor.PersianDatePicker/Blazor.PersianDatePicker.csproj --configuration Release --no-restore
-      
-    - name: Pack NuGet package
-      run: dotnet pack src/Blazor.PersianDatePicker/Blazor.PersianDatePicker.csproj --configuration Release --no-build --output ./artifacts
-      
-    - name: Publish to NuGet
-      run: dotnet nuget push ./artifacts/*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json --skip-duplicate
-      
-    - name: Create GitHub Release
-      uses: softprops/action-gh-release@v1
-      with:
-        tag_name: ${{ github.ref_name }}
-        name: Release ${{ steps.get_version.outputs.VERSION }}
-        body: |
-          ## Changes in this Release ${{ steps.get_version.outputs.VERSION }}
-          
-          ### 🚀 Performance Improvements
-          - **Memory optimization**: Reduced StringBuilder memory usage by 95%+ through style caching
-          - **Component lifecycle**: Implemented proper IDisposable pattern for resource cleanup
-          - **JavaScript interop**: Enhanced DotNetObjectReference disposal
-          
-          ### 🐛 Bug Fixes
-          - Fixed memory leaks in component disposal
-          - Improved style generation efficiency
-          - Better cache management for multiple component instances
-          
-          ### 📦 Technical Details
-          - Added static style cache to prevent redundant CSS generation
-          - Implemented component-specific cache keys
-          - Enhanced disposal pattern for EditContext event handlers
-          - Limited cache size to prevent unlimited memory growth
-          
-          **Full Changelog**: https://github.com/farshaddavoudi/Blazor.PersianDatePicker/compare/v${{ steps.get_version.outputs.VERSION }}...HEAD
-        draft: false
-        prerelease: false
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        
-    - name: Upload build artifacts
-      uses: actions/upload-artifact@v4
-      with:
-        name: nuget-package-v${{ steps.get_version.outputs.VERSION }}
-        path: ./artifacts/*.nupkg
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Extract version from tag
+        id: get_version
+        run: |
+          # Only extract version if this is a tag push, otherwise skip
+          if [[ $GITHUB_REF == refs/tags/v* ]]; then
+            VERSION=${GITHUB_REF#refs/tags/v}
+            echo "VERSION=$VERSION" >> $GITHUB_OUTPUT
+            echo "Extracted version: $VERSION"
+          else
+            echo "Not a version tag, skipping version extraction"
+          fi
+
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: |
+            5.0.x
+            6.0.x
+
+      - name: Update project version
+        if: startsWith(github.ref, 'refs/tags/v')
+        run: |
+          VERSION="${{ steps.get_version.outputs.VERSION }}"
+          echo "Updating version to: $VERSION"
+          # Use a different delimiter to avoid issues with forward slashes
+          sed -i "s|<Version>.*</Version>|<Version>$VERSION</Version>|" src/Blazor.PersianDatePicker/Blazor.PersianDatePicker.csproj
+          echo "Updated project file:"
+          cat src/Blazor.PersianDatePicker/Blazor.PersianDatePicker.csproj | grep "<Version>"
+
+      - name: Restore dependencies
+        run: dotnet restore src/Blazor.PersianDatePicker/Blazor.PersianDatePicker.csproj
+
+      - name: Build project
+        run: dotnet build src/Blazor.PersianDatePicker/Blazor.PersianDatePicker.csproj --configuration Release --no-restore
+
+      - name: Pack NuGet package
+        run: dotnet pack src/Blazor.PersianDatePicker/Blazor.PersianDatePicker.csproj --configuration Release --no-build --output ./artifacts
+
+      - name: Publish to NuGet
+        run: dotnet nuget push ./artifacts/*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json --skip-duplicate
+
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: ${{ github.ref_name }}
+          name: Release ${{ steps.get_version.outputs.VERSION }}
+          body: |
+            ## Changes in this Release ${{ steps.get_version.outputs.VERSION }}
+
+            ### 🚀 Performance Improvements
+            - **Memory optimization**: Reduced StringBuilder memory usage by 95%+ through style caching
+            - **Component lifecycle**: Implemented proper IDisposable pattern for resource cleanup
+            - **JavaScript interop**: Enhanced DotNetObjectReference disposal
+
+            ### 🐛 Bug Fixes
+            - Fixed memory leaks in component disposal
+            - Improved style generation efficiency
+            - Better cache management for multiple component instances
+
+            ### 📦 Technical Details
+            - Added static style cache to prevent redundant CSS generation
+            - Implemented component-specific cache keys
+            - Enhanced disposal pattern for EditContext event handlers
+            - Limited cache size to prevent unlimited memory growth
+
+            **Full Changelog**: https://github.com/farshaddavoudi/Blazor.PersianDatePicker/compare/v${{ steps.get_version.outputs.VERSION }}...HEAD
+          draft: false
+          prerelease: false
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: nuget-package-v${{ steps.get_version.outputs.VERSION }}
+          path: ./artifacts/*.nupkg
