--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -22,6 +22,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
@@ -151,13 +152,26 @@ jobs:
       - name: Commit version update back to repository
         if: steps.get_version.outputs.IS_RELEASE == 'true'
         run: |
+          # Configure Git
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
+
+          # Get the default branch name
+          DEFAULT_BRANCH=$(git remote show origin | grep 'HEAD branch' | cut -d' ' -f5)
+          echo "Default branch: $DEFAULT_BRANCH"
+
+          # Switch to the default branch
+          git checkout $DEFAULT_BRANCH
+
+          # Update the project file with the new version
+          sed -i "s|<Version>.*</Version>|<Version>${{ steps.get_version.outputs.VERSION }}</Version>|" src/Blazor.PersianDatePicker/Blazor.PersianDatePicker.csproj
+
+          # Check if there are changes and commit
           git add src/Blazor.PersianDatePicker/Blazor.PersianDatePicker.csproj
           if git diff --staged --quiet; then
             echo "No changes to commit"
           else
             git commit -m "Update version to ${{ steps.get_version.outputs.VERSION }} [skip ci]"
-            git push origin master
+            git push origin $DEFAULT_BRANCH
             echo "Version updated and committed to repository"
           fi
