--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -22,7 +22,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.PAT_TOKEN || secrets.GITHUB_TOKEN }}
 
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
@@ -152,6 +152,14 @@ jobs:
       - name: Commit version update back to repository
         if: steps.get_version.outputs.IS_RELEASE == 'true'
         run: |
+          # Skip if no PAT token is available (to avoid errors in protected repos)
+          if [ -z "${{ secrets.PAT_TOKEN }}" ]; then
+            echo "⚠️  PAT_TOKEN not available. Skipping version commit to avoid protected branch issues."
+            echo "ℹ️  The NuGet package has been published successfully with version ${{ steps.get_version.outputs.VERSION }}"
+            echo "ℹ️  Please manually update the version in the project file if needed."
+            exit 0
+          fi
+
           # Configure Git
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
@@ -173,5 +181,5 @@ jobs:
           else
             git commit -m "Update version to ${{ steps.get_version.outputs.VERSION }} [skip ci]"
             git push origin $DEFAULT_BRANCH
-            echo "Version updated and committed to repository"
+            echo "✅ Version updated and committed to repository"
           fi
